# BSManager

./: .env  .gitignore  Cargo.toml  README.md  Readme.md
.cargo/: config.toml
src/: .env  ai_test.rs  backend_test.rs  camera_test.rs  esp32_test.rs  main.rs  main_test.rs  models.rs  real_main.rs
src/ai/: yolo.rs
src/backend/: connect.rs  connection.rs  listener.rs  mod.rs  models.rs  processor.rs  processor_v2.rs  session_state.rs
src/controllers/: camera.rs  encoder.rs  frame_sender.rs  mod.rs
src/esp32/: handler.rs  message.rs  mockesp.rs  mod.rs  serial.rs
