[package]
name = "orangepi-IA"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.40", features = ["full"] }       
tokio-tungstenite = "0.20"                                
serde = { version = "1.0", features = ["derive"] }       
serde_json = "1.0"                                       
log = "0.4"                                             
env_logger = "0.10"                                      
tokio-serial = "5.4.5"
v4l = "0.14"
chrono = "0.4"
futures = "0.3"
futures-util = "0.3"                                    
opencv = { version = "0.91", features = ["clang-runtime"] }

image = "0.25"
imageproc = "0.25"
ndarray = "0.15"
once_cell = "1.19"
ort = { version = "2.0.0-rc.7", features = ["ndarray", "load-dynamic"] }
thiserror = "1.0"
dotenvy = "0.15"

[target.'cfg(target_os = "linux")'.dependencies]
