[package]
name = "orangepi-IA"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.40", features = ["full"] }       
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }                           
serde = { version = "1.0", features = ["derive"] }       
serde_json = "1.0"                                       
log = "0.4"                                             
env_logger = "0.10"                                      
tokio-serial = "5.4.5"
tokio-util = "0.7.16"
v4l = "0.14"
chrono = "0.4"
futures = "0.3"
futures-util = "0.3"                                    
opencv = { version = "0.91", features = ["clang-runtime"] }
url = "2.5.7"


[target.'cfg(target_os = "linux")'.dependencies]
