[package]
name = "orangepi-IA"
version = "0.1.0"
edition = "2024"

[dependencies]
ring = "0.17.14"
tokio = { version = "1.40", features = ["full"] }       
tokio-tungstenite = "0.20"
tokio-rustls = "0.24"
rustls = "0.21"
webpki-roots = "0.22"
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }       
serde_json = "1.0"                                       
log = "0.4"                                             
env_logger = "0.10"                                      
tokio-serial = "5.4.5"
tokio-util = "0.7.16"
v4l = "0.14"
chrono = "0.4"
futures = "0.3"
futures-util = "0.3"                                    
opencv = { version = "0.91", features = ["clang-runtime"] }
url = "2.5.7"
base64 = "0.22"
dotenv="0.15"
uuid = { version = "1", features = ["serde", "v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
